card generation working

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             <div class="random-cards-list">
                 <div class="random-card">
                     <iconify-icon icon="cib:cc-visa" class="card-icon"></iconify-icon>
-                    <p>41664532716748402609</p>
+                    <p id="visa-card"></p>
                 </div>
                 <div class="random-card">
                     <iconify-icon icon="cib:cc-mastercard" class="card-icon"></iconify-icon>
-                    <p>51664532716748402609</p>
+                    <p id="mastercard-card"></p>
                 </div>
                 <div class="random-card">
                     <iconify-icon icon="cib:cc-amex" class="card-icon"></iconify-icon>
-                    <p>378282246310005</p>
+                    <p id="amex-card"></p>
                 </div>
             </div>
             <button class="card-generator regenerate-card" id="generator-2">Generate random cards</button>
