--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="steps">
                 <div class="step">
                     <h2>Step #1</h2>
-                    <p>Type or past the card number you want to check.</p>
+                    <p>Type or paste the card number you want to check.</p>
                 </div>
                 <div class="step">
                     <h2>Step #2</h2>
